--- a/client/src/components/Admin/products/productButton.css
+++ b/client/src/components/Admin/products/productButton.css
@@ -6,8 +6,11 @@
     background-color: rgb(246, 248, 244);
     width: auto;
     height: auto;
-    box-shadow: 40;
-    border-radius: 7;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0 , 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0, 0 , 0, 0.75);
+    border-radius: 7px;
+    width: 510px;
+    height: 500px;
 }
 
 .navButton {
@@ -23,4 +26,9 @@
 }
 .iconButtonNav {
     font-size: 35px;
+}
+.titleModal {
+    height: 60px;
+    padding: 10px 0 0 10px;
+    font-size: 30px;
 }
