--- a/client/src/components/Admin/dashboard/chart.css
+++ b/client/src/components/Admin/dashboard/chart.css
@@ -10,3 +10,8 @@
     color: #555;
     
 }
+.graphic {
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0 , 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0, 0 , 0, 0.75);
+    margin: 20px;
+}
