--- a/client/src/components/Login/loginStyles.css
+++ b/client/src/components/Login/loginStyles.css
@@ -100,3 +100,24 @@
     font-size: 12px;
     color: red;
 }
+
+@media (min-width: 1200px) and (max-width: 1399px){
+    
+}
+
+@media (min-width: 992px) and (max-width: 1199px){
+    
+   
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+    
+}
+
+@media (min-width: 576px) and (max-width: 767px){
+    
+}
+
+@media (max-width: 575px){
+    
+}
