--- a/client/src/components/Brand/Brand.css
+++ b/client/src/components/Brand/Brand.css
@@ -1,12 +1,15 @@
 .ContainerBrand{
-    width: 100%;
+    width: 100vw;
     height: 700px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
     background: #000;
 }
 
 @media (min-width: 1200px) and (max-width: 1399px){
     .ContainerBrand{
-        width: 100%;
         height: 500px;
         background: #000;
     }
@@ -14,7 +17,6 @@
 
 @media (min-width: 992px) and (max-width: 1199px){
     .ContainerBrand{
-        width: 100%;
         height: 450px;
         background: #000;
     }
@@ -22,8 +24,21 @@
 
 @media (min-width: 768px) and (max-width: 991px){
     .ContainerBrand{
-        width: 100%;
         height: 400px;
+        background: #000;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px){
+    .ContainerBrand{
+        height: 100%;
+        background: #000;
+    }
+}
+
+@media (max-width: 575px){
+    .ContainerBrand{
+        height: 100%;
         background: #000;
     }
 }
