--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -9,13 +9,19 @@
 }
 
 .FootText{
-    font-size: 14px;
+    font-size: 1vw;
 }
 
-@media (min-width: 768px) and (max-width: 1399px) {
-    
+@media (min-width: 576px) and (max-width: 1399px){
+   
     .FootText{
-        font-size: 10px;
+        font-size: 1.5vw;
     }
 }
 
+@media (max-width: 575px){
+
+    .FootText{
+        font-size: 2.5vw;
+    }
+}
