--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .HomeContainer{
-    width: 100%;
+    width: 100vw;
     max-height: 600px;
     margin: 100px 0;
     display: flex;
@@ -22,14 +22,14 @@
     
     .Title{
         width: 50%;
-        height: 23%;
+        height: 22%;
         display: none;
-        padding: 30px;
+        padding: 25px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: absolute;
-        top: 38.5%;
+        top: 39%;
         left: 25%;
     }
     
@@ -47,27 +47,29 @@
     }
     
     .Title4{
-        width: 65%;
+        width: 66%;
         height: 30%;
         display: none;
-        padding: 20px;
+        padding: 12px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: absolute;
         top: 35%;
-        left: 20%;
+        left: 19%;
     }
     
     .Title5{
+        width: 66%;
+        height: 40%;
         display: none;
-        padding: 30px;
+        padding: 5px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: absolute;
-        top: 24%;
-        left: 25%;
+        top: 30%;
+        left: 17%;
     }
     
     .divTitle{
@@ -135,7 +137,6 @@
         transition: 0.5s all;
     }
     
-    
     .divTitle4:hover  .Title4{
         display: block;
     }
@@ -158,50 +159,63 @@
 }
 
 @media (min-width: 1200px) and (max-width: 1399px){
+
+    .Images{
+        width: 80%;
+        height: 600px;
+        max-height: 600px;
+    }
     
     .Title{
+        width: 60%;
+        height: 20%;
         display: none;
-        padding: 30px;
+        padding: 20px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: absolute;
-        top: 39%;
-        left: 22%;
+        top: 40%;
+        left: 20%;
     }
     
     .Title2, .Title3{
-        width: 220px;
+        width: 60%;
+        height: 35%;
         display: none;
-        padding: 30px;
+        padding: 10px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: relative;
-        top: 26%;
+        top: 32.5%;
         left: 20%;
     }
     
     .Title4{
+        width: 70%;
+        height: 26%;
         display: none;
-        padding: 30px;
+        padding: 6px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: absolute;
-        top: 32%;
-        left: 10%;
+        top: 37%;
+        left: 15%;
     }
     
     .Title5{
+        width: 70%;
+        height: 40%;
         display: none;
-        padding: 30px;
+        padding: 5px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: absolute;
-        top: 23%;
-        left: 10%;
+        top: 30%;
+        left: 15%;
     }
     
     .divTitle{
@@ -221,57 +235,131 @@
     .divTitle:hover  .Title{
         display: block;
     }
+
+    .divTitle2{
+        width: 35.5%;
+        height: 49%;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        float: left;
+        background-image: url('../../assets/airJordan1.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
     
-    /* .divTitle:hover{
-        filter: brightness(50%);
-    } */
+    .divTitle2:hover  .Title2{
+        display: block;
+    }
     
+    .divTitle3{
+        width: 35.5%;
+        height: 49%;
+        margin-right: 10px;
+        float: left;
+        background-image: url('../../assets/yeezy500.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle3:hover  .Title3{
+        display: block;
+    }
+    
+    .divTitle4{
+        width: 26%;
+        height: 60%;
+        float: right;
+        margin-bottom: 10px;
+        background-image: url('../../assets/thunderSpectra.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle4:hover  .Title4{
+        display: block;
+    }
+    
+    .divTitle5{
+        width: 26%;
+        height: 38%;
+        float: right;
+        background-image: url('../../assets/vans.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle5:hover  .Title5{
+        display: block;
+    }
     
 }
 
 @media (min-width: 992px) and (max-width: 1199px){
     
+
+    .Images{
+        width: 80%;
+        height: 600px;
+        max-height: 600px;
+    }
+
     .Title{
+        width: 70%;
+        height: 20%;
         display: none;
-        padding: 30px;
+        padding: 20px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: absolute;
-        top: 39%;
+        top: 40%;
         left: 15%;
     }
     
     .Title2, .Title3{
+        width: 60%;
+        height: 30%;
         display: none;
-        padding: 20px;
+        padding: 10px;
         color: #fff;
-        font-size: 36px;
+        font-size: 38px;
         border: solid #fff;
         position: relative;
-        top: 32%;
-        left: 14%;
+        top: 35%;
+        left: 20%;
     }
     
     .Title4{
+        width: 70%;
+        height: 26%;
         display: none;
-        padding: 20px;
+        padding: 15px;
         color: #fff;
         font-size: 36px;
         border: solid #fff;
         position: absolute;
-        top: 36%;
+        top: 37%;
         left: 15%;
     }
     
     .Title5{
+        width: 70%;
+        height: 36%;
         display: none;
-        padding: 20px;
+        padding: 10px;
         color: #fff;
         font-size: 36px;
         border: solid #fff;
         position: absolute;
-        top: 27%;
+        top: 32%;
         left: 15%;
     }
     
@@ -292,6 +380,71 @@
     .divTitle:hover  .Title{
         display: block;
     }
+
+    .divTitle2{
+        width: 35.5%;
+        height: 49%;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        float: left;
+        background-image: url('../../assets/airJordan1.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle2:hover  .Title2{
+        display: block;
+    }
+    
+    .divTitle3{
+        width: 35.5%;
+        height: 49%;
+        margin-right: 10px;
+        float: left;
+        background-image: url('../../assets/yeezy500.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle3:hover  .Title3{
+        display: block;
+    }
+    
+    .divTitle4{
+        width: 26%;
+        height: 60%;
+        float: right;
+        margin-bottom: 10px;
+        background-image: url('../../assets/thunderSpectra.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    
+    .divTitle4:hover  .Title4{
+        display: block;
+    }
+    
+    .divTitle5{
+        width: 26%;
+        height: 38%;
+        float: right;
+        background-image: url('../../assets/vans.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle5:hover  .Title5{
+        display: block;
+    }
     
     /* .divTitle:hover{
         filter: brightness(50%);
@@ -303,44 +456,34 @@
 
     
     .Title{
+        width: 60%;
+        height: 20%;
         display: none;
-        padding: 30px;
+        padding: 20px;
         color: #fff;
         font-size: 48px;
         border: solid #fff;
         position: absolute;
-        top: 39%;
-        left: 14%;
+        top: 40%;
+        left: 20%;
     }
     
-    .Title2{
+    .Title2, .Title4{
         width: 50%;
+        height: 30%;
         display: none;
-        /* padding: 30px; */
+        padding: 10px;
         color: #fff;
         text-align: center;
-        font-size: 48px;
+        font-size: 40px;
         border: solid #fff;
         position: relative;
-        top: 25%;
+        top: 35%;
         left: 25%;
-    }
-
-    .Title4{
-        display: none;
-        padding: 30px;
-        color: #fff;
-        font-size: 48px;
-        border: solid #fff;
-        position: absolute;
-        top: 26%;
-        left: 13%;
     }
     
     .divTitle{
-        width: 47.3%;
-        min-width: 47.3%;
-        max-width: 36%;
+        width: 49%;
         height: 100%;
         margin-right: 12px;
         float: left;
@@ -349,7 +492,10 @@
         background-position: center center;
         background-size: cover;
         transition: 0.5s all;
-        /* border: 1px solid #f0f; */
+    }
+
+    .divTitle:hover  .Title{
+        display: block;
     }
 
     .divTitle2{
@@ -362,13 +508,107 @@
         background-position: center center;
         background-size: cover;
         transition: 0.5s all;
-        /* border: 1px solid #f0fs */
     }
 
+    .divTitle2:hover  .Title2{
+        display: block;
+    }
+    
     .divTitle4{
         width: 49%;
         height: 49%;
-        float: left;
+        float: right;
+        background-image: url('../../assets/thunderSpectra.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+
+    .divTitle4:hover  .Title4{
+        display: block;
+    }
+
+    .divTitle5, .divTitle3, .Title3, .Title5 { display: none }
+
+}
+
+@media (min-width: 576px) and (max-width: 767px){
+    
+    .HomeContainer{
+        margin: 50px 0;
+    }
+
+    .Images{
+        width: 85%;
+        height: 500px;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .Title, .Title2, .Title3, .Title4{
+        width: 50%;
+        height: 30%;
+        display: none;
+        padding: 10px;
+        color: #fff;
+        font-size: 26px;
+        border: solid #fff;
+        position: absolute;
+        top: 35%;
+        left: 25%;
+    }
+
+    .divTitle{
+        width: 48%;
+        height: 48%;
+        margin: 0 5px 5px 0;
+        background-image: url('../../assets/nikeAirForce1.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle:hover .Title{
+        display: block
+    }
+    
+    .divTitle2{
+        width: 48%;
+        height: 48%;
+        margin-bottom: 5px;
+        background-image: url('../../assets/airJordan1.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle2:hover .Title2{
+        display: block
+    }
+    
+    .divTitle3{
+        width: 48%;
+        height: 48%;
+        background-image: url('../../assets/yeezy500.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle3:hover .Title3{
+        display: block
+    }
+    
+    .divTitle4{
+        width: 48%;
+        height: 48%;
+        margin-right: 5px; 
         background-image: url('../../assets/thunderSpectra.jpg');
         background-repeat: no-repeat;
         background-position: center center;
@@ -376,11 +616,102 @@
         transition: 0.5s all;
     }
     
+    .divTitle4:hover .Title4{
+        display: block
+    }
     
+    .divTitle5, .Title5{ display: none }
+    
+}
 
+@media (max-width: 575px){
     
-    /* .divTitle:hover{
-        filter: brightness(50%);
-    } */
+    .HomeContainer{
+        margin: 50px 0;
+    }
+
+    .Images{
+        width: 100%;
+        height: 400px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .Title, .Title2, .Title3, .Title4{
+        width: 50%;
+        height: 30%;
+        display: none;
+        padding: 10px;
+        color: #fff;
+        font-size: 22px;
+        border: solid #fff;
+        position: absolute;
+        top: 35%;
+        left: 25%;
+    }
+    
+    .divTitle{
+        width: 48%;
+        height: 48%;
+        background-image: url('../../assets/nikeAirForce1.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+
+    .divTitle:hover .Title{
+        display: block
+    }
+    
+    .divTitle2{
+        width: 48%;
+        height: 48%;
+        background-image: url('../../assets/airJordan1.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle2:hover .Title2{
+        display: block
+    }
+    
+    .divTitle3{
+        width: 48%;
+        height: 48%;
+        background-image: url('../../assets/yeezy500.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle3:hover .Title3{
+        display: block
+    }
+    
+    .divTitle4{
+        width: 48%;
+        height: 48%;
+        margin-left: 3px; 
+        margin-right: 6px; 
+        background-image: url('../../assets/thunderSpectra.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transition: 0.5s all;
+    }
+    
+    .divTitle4:hover .Title4{
+        display: block
+    }
+
+    .divTitle5, .Title5{ display: none }
+    
 
 }
