--- a/client/src/components/Us/Us.css
+++ b/client/src/components/Us/Us.css
@@ -1,5 +1,5 @@
 .UsContainer{
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,10 +8,35 @@
     padding: 50px;
 }
 
-p{
-    font-size: 24px;
-    font-weight: 400;
-    margin: 20px 0;
+.Style{
+    width: 50vw;
+    max-height: 80vh;
+    padding: 15px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+}
+
+.UsContainer h1{
+    font-size: 3vw;
+    font-weight: bold;
+}
+
+
+.UsContainer p{
+    font-size: 1.8vw;
+}
+
+.TextModal p{
+    text-align: center;
+    font-size: 1.2vw;
 }
 
 .PortadaModal{
@@ -24,23 +49,35 @@ p{
     background-color:black;
 }
 
-@media (min-width: 992px) and (max-width: 1399px){
-    
-    .UsContainer h1{
-        font-size: 24px;
-    }
-    
-    .UsContainer p{
-        font-size: 16px;
-    }
-    
-    .TextModal p{
-        font-size: 16px;
-
-    }
+.ButtonModal{
+    width: 25%;
+    min-height: 4vh;
+    font-size: 2.5vw;
+    background: black;
+    color: white; 
+    border-radius: 10px;
+    margin-top: 25px;
+    position: relative;
+    top: -1vh;
 }
 
-@media (min-width: 768px) and (max-width: 991px){
+@media (min-width: 992px) and (max-width: 1399px){
+
+    .Style{
+        width: 50vw;
+        max-height: 80vh;
+        padding: 15px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 10px;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    }
 
     .UsContainer{
         width: 100%;
@@ -53,17 +90,212 @@ p{
     }
     
     .UsContainer h1{
-        font-size: 24px;
+        font-size: 4vw;
+        font-weight: bold;
+    }
+    
+    .UsContainer p{
+        font-size: 1.8vw;
+    }
+    
+    .TextModal p{
+        text-align: center;
+        font-size: 1.4vw;
+    }
+
+    .ButtonModal{
+        width: 25%;
+        min-height: 4vh;
+        font-size: 2.5vw;
+        background: black;
+        color: white; 
+        border-radius: 10px;
+        margin-top: 25px;
+        position: relative;
+        top: -1vh;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+
+    .Style{
+        width: 70vw;
+        max-height: 80vh;
+        padding: 15px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 10px;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    }
+
+    .UsContainer{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 0;
+        padding: 20px;
+    }
+    
+    .UsContainer h1{
+        font-size: 4vw;
+        font-weight: bold;
     }
     
     .UsContainer p{
         width: 80%;
-        font-size: 14px;
+        font-size: 2vh;
     }
     
     .TextModal p{
+        text-align: center; 
         font-size: 16px;
+    }
 
+    .ButtonModal{
+        width: 25%;
+        min-height: 4vh;
+        font-size: 2.5vw;
+        background: black;
+        color: white; 
+        border-radius: 10px;
+        margin-top: 25px;
+        position: relative;
+        top: -2vh;
     }
 }
 
+@media (min-width: 576px) and (max-width: 767px){
+
+    .Style{
+        width: 70vw;
+        max-height: 75vh;
+        padding: 15px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 10px;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    }
+
+    .PortadaModal{
+        width: 100%;
+        min-height: 15vh;
+        position: relative;
+        margin-top: 2vh;
+        /* background-image: url(../../assets/adidas-pureboost-dpr.jpg); */
+        background-size: cover;
+        background-position: center center;
+        background-color:black;
+    }
+
+    .ButtonModal{
+        position: relative;
+        top: -6vh;
+    }
+    
+    .UsContainer h1{
+        font-size: 5vw;
+        font-weight: bold;
+    }
+
+    .UsContainer p{
+        width: 80%;
+        font-size: 3vw;
+    }
+    
+    .TextModal p{
+        font-size: 2.5vh;
+        line-height: 27px;
+        text-align: center;
+        position: relative;
+        top: -4vh;
+        margin-bottom: 2vh;
+    }
+
+    .TitleModal h1{
+        font-size: 6vw;
+    }
+
+}
+
+@media (max-width: 575px){
+
+    .UsContainer{
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 0;
+        padding: 10px;
+    }
+
+    .PortadaModal{
+        width: 100%;
+        min-height: 20%;
+        position: relative;
+        margin-top: 2vh;
+        /* background-image: url(../../assets/adidas-pureboost-dpr.jpg); */
+        background-size: cover;
+        background-position: center center;
+        background-color:black;
+    }
+    
+    .Style{
+        width: 70vw;
+        max-height: 75vh;
+        padding: 15px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 10px;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    }
+
+    .ButtonModal{
+        position: relative;
+        top: -6vh;
+        /* border: thin dotted #f00; */
+    }
+    
+    .UsContainer h1{
+        font-size: 7vw;
+        font-weight: bold;
+    }
+    
+    .UsContainer p{
+        width: 80%;
+        font-size: 5vw;
+    }
+    
+    .TextModal p{
+        font-size: 3.3vw;
+        text-align: center;
+        position: relative;
+        top: -4vh;
+        margin-bottom: 2vh;
+    }
+
+    .TitleModal h1{
+        font-size: 6vw;
+    }
+
+}
