--- a/client/src/components/Newsletter/Newsletter.css
+++ b/client/src/components/Newsletter/Newsletter.css
@@ -114,7 +114,7 @@
 
     .NewsletterContainer{
         width: 100vw;
-        min-height: 280px;
+        max-height: 250px;
         margin: 50px 0;
         padding: 15px 0;
         display: flex;
