--- a/client/src/components/Forms/product/postProduct.css
+++ b/client/src/components/Forms/product/postProduct.css
@@ -38,6 +38,7 @@
     width: 220px;
     border: 1px solid  #555;
     border-radius: 3px ;
+    color: #555;
 }
 .boxSelectProduct {
     height: 70px;
@@ -61,8 +62,7 @@
 
 
 }
-.boxStockProduct {
-}
+
 .titleStockProduct {
     font-size: 15px;
     margin: 0px 0 0 10px;
