Recovery password funcional
Se puede recuperar la contraseña (no de google), hay que correjir estilos

--- a/client/src/components/Login/loginStyles.css
+++ b/client/src/components/Login/loginStyles.css
@@ -64,6 +64,10 @@
     text-decoration: none;
     color: #fc4444;
 }
+.forgot-log{
+    color: #fc4444;
+    cursor: pointer;
+}
 .Field{
     width: 300px;
     height: 35px;
