--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -232,7 +232,7 @@ ul li:hover, ul li a:hover{
     .NavContainerMobile{
         display: none;
     }
-    
+
 }
 
 @media (min-width: 1200px) and (max-width: 1399px) {
@@ -431,6 +431,7 @@ ul li:hover, ul li a:hover{
         flex-direction: row;
         align-items: left;
         justify-content: flex-start;
+        z-index: 11;
         /* border: thin dotted #0f0; */
     }
     
@@ -449,4 +450,59 @@ ul li:hover, ul li a:hover{
         /* border: thin dotted #00f; */
     }
     
+    .NavigationMobile{
+        width: 100vw;
+        height: 100vh;
+        background-color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 0;
+        left: -100%;
+        z-index: 100;
+        transition: all 0.5s ease;
+        overflow-y: none;
+    }
+
+    .NavigationMobile.active{
+        left: 0;
+    }
+
+    .NavigationMobile .LinkMobile{
+        width: 100px;
+        height: 30px;
+        margin: 10px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 5px 20px;
+        /* border: 1px solid #ccc; */
+        border-radius: 15px;
+    }
+
+    .NavigationMobile .LinkMobile:hover{
+        background-color: #00000040;
+        color: #fff;
+    }
+
+    .MenuNavMobile .IconMen:hover{
+        cursor: pointer;
+        color: #f00;
+    }
+
+    .MenuNavMobile .IconMen:nth-child(2){
+        display: none;
+    }
+
+    .MenuNavMobile.active .IconMen:nth-child(2){
+        display: block;
+        z-index: 130;
+    }
+
+    .MenuNavMobile.active .IconMen:nth-child(1){
+        display: none;
+    }
 }
