--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     transition: 0.5s all;
     /* border: thin dotted #f00; */
 }
@@ -15,41 +16,53 @@
 
 .Zapatilla{
     width: 100%;
-    height: 220px;
-    /* border: thin dotted #f00; */
+    max-height: 180px;
+    height: 300px;
+    overflow: hidden;
+    /* border: thin dotted #00f; */
 }
 
 .Zapatilla img{
     width: 200px;
     height: 250px;
+    position: relative;
+    bottom: 5px;
 }
 
-.Name{ 
+.Name h3{ 
     width: 100%;
-    height: 70px;
-    font-size: 16px;
+    height: 55px;
+    font-size: 1.3vw;
     font-family: 'Zen Kurenaido', sans-serif;
-    font-weight: 100;
-    line-height: 20px;
+    line-height: 25px;
     color: #000;
     /* border: thin dotted #f00; */
 }
 
-.PriceProduct{
+.PriceProduct h5{
     color: #000;
-    font-size: 24px;
+    font-size: 1.2vw;
+    /* border: thin dotted #f00; */
+}
+
+.Rate{
+    width: 100%;
+    height: 30px;
     /* border: thin dotted #f00; */
 }
 
 .IconShoppingContainer{
-    width: 50%;
+    width: 100%;
     margin-top: 10px;
+    position: absolute;
+    top: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     color:  rgb(197, 197, 197);
     transition: 0.5s all;
+    z-index: 1;
     /* border: thin dotted #f00; */
 }
 
@@ -68,6 +81,27 @@
     background: '-moz-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
     background: '-webkit-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
     background: 'linear-gradient(to top, #9E0000 0%, #FF0000 100%)';
+}
+
+.TallesProduct{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    
+    align-items: flex-start;
+    justify-content: space-around;
+    /* border: thin dotted #f00; */
+}
+
+.TalleCard{
+    font-size: 0.6vw;
+    float: left;
+    border-radius: 5px;
+    border: solid 1px #cccccc50;
+    color: #00000095;
+    padding: 0 5px;
+    margin: 0 5px;
 }
 
 @media (min-width: 1200px) and (max-width: 1399px){
