--- a/client/src/components/Newsletter/Newsletter.css
+++ b/client/src/components/Newsletter/Newsletter.css
@@ -114,7 +114,7 @@
 
     .NewsletterContainer{
         width: 100vw;
-        max-height: 250px;
+        max-height: 22vh;
         margin: 50px 0;
         padding: 15px 0;
         display: flex;
