--- a/client/src/components/Admin/brands/brandsButton.css
+++ b/client/src/components/Admin/brands/brandsButton.css
@@ -10,3 +10,11 @@
     padding: 5px;
     border-radius: 5px;
 }
+
+.buttonResetAdmin {
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    font-size: 25px;
+    background-color: transparent;
+}
