--- a/client/src/components/Catalogue/Catalogue.css
+++ b/client/src/components/Catalogue/Catalogue.css
@@ -1,99 +1,127 @@
-.CatologueContainer{
-    width: 99.1vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    overflow: hidden;
-    /* border: thin dotted #00f;  */
-}
 
-.Portada{
-    width: 100%;
-    max-height: 400px;
-    height: 40vh;
-    background-color: #ccccce;
-    background-image: url(../../assets/portada.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    /* border: thin dotted #00f;  */
-}
-.Info{ 
-    width: 85%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 10px;
-    /* border: thin dotted #00f;  */
-}
 
-.Filtros{
-    min-width: 200px;
-    width: 250px;
-    height: 800px;
-    top: 0;
-     /* border: thin dotted #00f;  */
-}
+@media (min-width: 1400px) {
 
-.TitleFilter{
-    width: 100%;
-    height: 10px;
-    font-weight: 500;
-    margin-bottom: 20px;
-}
+    .CatologueContainer{
+        width: 99.1vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        overflow: hidden;
+        /* border: thin dotted #00f;  */
+    }
+    
+    .Portada{
+        width: 100%;
+        max-height: 400px;
+        height: 40vh;
+        background-color: #ccccce;
+        background-image: url(../../assets/portada.jpg);
+        background-position: center center;
+        background-repeat: no-repeat;
+        overflow: hidden;
+        /* border: thin dotted #00f;  */
+    }
 
-.SelectFilter{ 
-    width: 100%;
-    height: 40px;
-    margin-bottom: 20px;
-}
+    .Info{ 
+        width: 85%;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+        margin-top: 30px;
+        /* border: thin dotted #0f0;  */
+    }
+    
+    .Filtros{
+        width: 15%;
+        height: auto;
+        padding-bottom: 50px;
+        /* border: thin dotted #00f;  */
+    }
+    
+    .TitleFilter{
+        width: 100%;
+        height: 10px;
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
 
-.Select{
-    width: 80%;
-    height: 30px;
-    outline: 0; 
-    border-radius: 12px;
-    padding: 0px 10px 0 10px;
-    font-size: 1em;
-    transition: all 0.25s ease; 
-    color: rgb(99, 99, 99);
-    border: solid 1px #ccc;
-}
+    .SelectFilter{ 
+        width: 100%;
+        height: 40px;
+        margin-bottom: 20px;
+    }
+    
+    .Select{
+        width: 80%;
+        height: 30px;
+        outline: 0; 
+        border-radius: 12px;
+        padding: 0px 10px 0 10px;
+        font-size: 1em;
+        transition: all 0.25s ease; 
+        color: rgb(99, 99, 99);
+        border: solid 1px #ccc;
+    }
+    
+    .Select:hover{
+        box-shadow: 0 5px 10px #00000030;
+        cursor: pointer;
+        border: none;
+    }
+    
+    .Productos{
+        width: 70vw; 
+        height: 80vh;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        /* border: thin dotted #f00; */
+    }
+    
+    .Shoes{
+       
+        position: relative;
+        float: left;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    
+    .Paginado{
+        width: 40%;
+        height: 25px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+    }
 
-.Select:hover{
-    box-shadow: 0 5px 10px #00000030;
-    cursor: pointer;
-    border: none;
-}
+    .RadioFilter{
+        margin: 0 5px;
+        width: 16px;
+        height: 16px;
+        position: relative;
+        top: 3px;
+        border: solid 2px #999;
+        margin-right: 5px;   
+            /* appearance: none; */
+        transition: 0.2s all linear;
+        
+    }
 
-.Productos{
-    width: 1350px; 
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
+    .RadioFilter:hover{
+        cursor: pointer;
+    }
 
-.Shoes{
-   
-    position: relative;
-    float: left;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    /* border: thin dotted #f00; */
-}
-
-.Paginado{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    clear: both;
-    margin-top: 20px;
-    /* border: thin dotted #f00; */
+    
+    .RadioFilter:checked {
+        
+        border: 8px solid rgb(202, 0, 67);
+    }
+    
+    
 }
 
 @media (min-width: 1200px) and (max-width: 1399px){
