--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -1,54 +1,8 @@
-.ProductContainer{
-    width: 230px;
-    height: 350px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    transition: 0.5s all;
-    /* border: thin dotted #f00; */
-}
-
 .ProductContainer:hover{
-    transform: translateY(-7px);
-}
-
-.Zapatilla{
-    width: 100%;
-    max-height: 180px;
-    height: 300px;
-    overflow: hidden;
-    /* border: thin dotted #00f; */
-}
-
-.Zapatilla img{
-    width: 200px;
-    height: 250px;
-    position: relative;
-    bottom: 5px;
-}
-
-.Name h3{ 
-    width: 100%;
-    height: 55px;
-    font-size: 1.3vw;
-    font-family: 'Zen Kurenaido', sans-serif;
-    line-height: 25px;
-    color: #000;
-    /* border: thin dotted #f00; */
-}
-
-.PriceProduct h5{
-    color: #000;
-    font-size: 1.2vw;
-    /* border: thin dotted #f00; */
-}
-
-.Rate{
-    width: 100%;
-    height: 30px;
-    /* border: thin dotted #f00; */
+    /* border-top: solid 1px #00000020;
+    border-left: solid 1px #00000020; */
+    transform: translateY(-10px);
+    box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2)
 }
 
 .IconShoppingContainer{
@@ -102,6 +56,100 @@
     color: #00000095;
     padding: 0 5px;
     margin: 0 5px;
+}
+
+@media (min-width: 1400px){
+
+    .ProductContainer{
+        width: 230px;
+        height: 350px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        transition: 0.5s all;
+        
+        /* border: thin dotted #f00; */
+    }
+
+    .Zapatilla{
+        width: 100%;
+        max-height: 180px;
+        height: 300px;
+        overflow: hidden;
+        /* border: thin dotted #00f; */
+    }
+    
+    .Zapatilla img{
+        width: 200px;
+        height: 250px;
+        position: relative;
+        bottom: 5px;
+    }
+    
+    .Name h3{ 
+        width: 100%;
+        height: 55px;
+        font-size: 1.1vw;
+        font-family: 'Zen Kurenaido', sans-serif;
+        line-height: 25px;
+        color: #000;
+        /* border: thin dotted #f00; */
+    }
+    
+    .PriceProduct{
+        width: 100%;
+        color: #000;
+        font-size: 1.5vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        /* border: thin dotted #f00; */
+    }
+
+    .OldPrice{
+        margin: 0 10px;
+        text-decoration:line-through;
+        color: #f00;
+    }
+
+    .Discount{
+        width: 100%;
+        height: 50px;
+        position: absolute;
+        top: -15px;
+        left: 0;
+        background-image: url('../../assets/discount.png');
+        background-size: 40%;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    
+    .Discount h5{
+        color: #fff;
+        font-weight: bold;
+        line-height: 40px;
+        font-size: 1.4vw;
+        position: relative;
+        left: -8px;
+    }
+    
+    .Rate{
+        width: 100%;
+    }
+    
+    .NoRating{
+        width: 100%;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        color: #cccccc;
+        font-size: 0.7vw;
+    }
+
 }
 
 @media (min-width: 1200px) and (max-width: 1399px){
