Catálogo para resoluciones de 1200px

--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -1,6 +1,7 @@
 .ProductContainer:hover{
     /* border-top: solid 1px #00000020;
     border-left: solid 1px #00000020; */
+    cursor: pointer;
     transform: translateY(-10px);
     box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2)
 }
@@ -22,8 +23,9 @@
 
 .IconShopping:hover{
     cursor: pointer;
-    background: linear-gradient(360deg, #9E0000, #FF0000);
     color: #9E0000;
+    background: linear-gradient(360deg, #9E0000, #FF0000);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .IconShopping{
@@ -155,8 +157,8 @@
 @media (min-width: 1200px) and (max-width: 1399px){
 
     .ProductContainer{
-        width: 180px;
-        height: 300px;
+        width: 160px;
+        height: 250px;
         border-radius: 10px;
         display: flex;
         flex-direction: column;
@@ -173,38 +175,77 @@
     }
     
     .Zapatilla img{
-        width: 170px;
-        height: 210px;
+        width: 130px;
+        position: relative;
+        top: 15px;
+        /* height: 210px; */
         /* border: thin dotted #0f0; */
     }
 
-    .Name{ 
+    .Name h3{ 
         width: 100%;
-        height: 60px;
-        font-size: 16px;
+        height: 35px;
+        font-size: 1.1vw;
         font-family: 'Zen Kurenaido', sans-serif;
-        font-weight: 100;
-        line-height: 20px;
+        line-height: 15px;
         color: #000;
         /* border: thin dotted #f00; */
     }
     
-    .Price{
+    .PriceProduct{
+        width: 95%;
         color: #000;
-        font-size: 24px;
+        font-size: 1vw;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-evenly;
         /* border: thin dotted #f00; */
+        margin-left: 10px;
+    }
+    
+    .OldPrice{
+        font-size: 1.5vw;
+        margin: 0 10px;
+        text-decoration:line-through;
+        color: #f00;
     }
 
-    .IconShoppingContainer{
-        width: 80%;
-        margin-top: 10px;
+    .Discount{
+        width: 100%;
+        height: 50px;
+        position: absolute;
+        top: -15px;
+        left: 0;
+        background-image: url('../../assets/discount.png');
+        background-size: 40%;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    
+    .Discount h5{
+        color: #fff;
+        font-weight: bold;
+        line-height: 40px;
+        font-size: 1.6vw;
+        position: relative;
+        left: -8px;
+    }
+    
+    .Rate{
+        width: 100%;
+    }
+    
+    .NoRating{
+        width: 100%;
+        height: 30px;
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-around;
-        color:  rgb(197, 197, 197);
-        transition: 0.5s all;
-        /* border: thin dotted #f00; */
+        justify-content: space-evenly;
+        color: #cccccc;
+        font-size: 0.7vw;
     }
+
 
 }
