--- a/client/src/components/Catalogue/Catalogue.css
+++ b/client/src/components/Catalogue/Catalogue.css
@@ -126,19 +126,121 @@
 
 @media (min-width: 1200px) and (max-width: 1399px){
 
+    .CatologueContainer{
+        width: 99.1vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        overflow: hidden;
+        /* border: thin dotted #00f;  */
+    }
+    
+    .Portada{
+        width: 100%;
+        max-height: 400px;
+        height: 40vh;
+        background-color: #ccccce;
+        background-image: url(../../assets/portada.jpg);
+        background-position: center center;
+        background-repeat: no-repeat;
+        overflow: hidden;
+        /* border: thin dotted #00f;  */
+    }
+
     .Info{ 
-        width: 99%;
+        width: 95%;
+        margin-top: 30px;
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         justify-content: space-around;
+        /* border: thin dotted #00f;  */
     }
     
     .Filtros{
-        min-width: 200px;
-        width: 250px;
-        height: 800px;
-        top: 0;
-        /* border: thin dotted #f00;  */
+        width: 15%;
+        height: auto;
+        padding-bottom: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        /* border: thin dotted #00f;  */
+    }
+
+    .Filtros h1{
+        font-size: 1.5em;
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
+    
+    .TitleFilter{
+        width: 100%;
+        height: 10px;
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
+
+    .SelectFilter{ 
+        width: 100%;
+        height: 40px;
+        margin-bottom: 20px;
+    }
+    
+    .Select{
+        width: 80%;
+        height: 25px;
+        outline: 0; 
+        border-radius: 12px;
+        padding: 0px 10px 0 10px;
+        font-size: 0.8em;
+        transition: all 0.25s ease; 
+        color: rgb(99, 99, 99);
+        border: solid 1px #ccc;
+    }
+    
+    .Select:hover{
+        box-shadow: 0 5px 10px #00000030;
+        cursor: pointer;
+        border: none;
+    }
+    
+    .Productos{
+        width: 75vw; 
+        height: 72vh;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        /* border: thin dotted #f00; */
+    }
+    
+    .Shoes{
+        position: relative;
+        float: left;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    
+    .Paginado{
+        width: 41%;
+        height: 25px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        /* border: thin dotted #f00; */
+    }
+
+    .RadioFilter{
+        margin: 0 5px;
+        width: 16px;
+        height: 16px;
+        position: relative;
+        top: 3px;
+        border: solid 2px #999;
+        margin-right: 5px;   
+            /* appearance: none; */
+        transition: 0.2s all linear;
+        
     }
 }
