--- a/client/src/components/ProductDetail/ProductDetail.css
+++ b/client/src/components/ProductDetail/ProductDetail.css
@@ -12,18 +12,17 @@
 }
 
 .CardDetail{
+    width: 55%;
+    max-width: 60%;
+    min-height: 530px;
     margin-top: 10%;
     background: #fff;
-    max-width: 1000px;
-    width: 1000px;
-    max-height: 600px;
-    min-height: 530px;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: 10px 10px 30px 10px;
+    padding: 10px 10px 50px 10px;
     box-shadow: 0 5px 10px rgba(0,0,0, 0.15);
     /* border: thin dotted #f00; */
 }
