--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -60,6 +60,10 @@
     margin: 0 5px;
 }
 
+.OldPriceNO{
+    display: none;
+}
+
 @media (min-width: 1400px){
 
     .ProductContainer{
@@ -246,6 +250,99 @@
         color: #cccccc;
         font-size: 0.7vw;
     }
-
-
 }
+
+@media (min-width: 992px) and (max-width: 1199px){
+    
+    .ProductContainer{
+        width: 160px;
+        height: 250px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transition: 0.5s all;
+        border: thin dotted #f00;
+    }
+
+    .Zapatilla{
+        width: 100%;
+        height: 180px;
+        overflow: hidden;
+        border: thin dotted #0f0;
+    }
+    
+    .Zapatilla img{
+        width: 130px;
+        position: relative;
+        top: 15px;
+        /* height: 210px; */
+        border: thin dotted #0f0;
+    }
+
+    .Name h3{ 
+        width: 100%;
+        height: 35px;
+        font-size: 1.1vw;
+        font-family: 'Zen Kurenaido', sans-serif;
+        line-height: 15px;
+        color: #000;
+        /* border: thin dotted #f00; */
+    }
+    
+    .PriceProduct{
+        width: 95%;
+        color: #000;
+        font-size: 1vw;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        /* border: thin dotted #f00; */
+        margin-left: 10px;
+    }
+    
+    .OldPrice{
+        font-size: 1.5vw;
+        margin: 0 10px;
+        text-decoration:line-through;
+        color: #f00;
+    }
+
+    .Discount{
+        width: 100%;
+        height: 50px;
+        position: absolute;
+        top: -15px;
+        left: 0;
+        background-image: url('../../assets/discount.png');
+        background-size: 40%;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    
+    .Discount h5{
+        color: #fff;
+        font-weight: bold;
+        line-height: 40px;
+        font-size: 1.6vw;
+        position: relative;
+        left: -8px;
+    }
+    
+    .Rate{
+        width: 100%;
+    }
+    
+    .NoRating{
+        width: 100%;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        color: #cccccc;
+        font-size: 0.7vw;
+    }
+}
+
