--- a/client/src/views/brands/Brands.css
+++ b/client/src/views/brands/Brands.css
@@ -1,5 +1,5 @@
 .BrandContainer{
-    width: 100vw;
+    width: 100%;
     /* height: 100vh; */
     display: flex;
     flex-direction: column;
@@ -7,9 +7,19 @@
     justify-content: space-between;
 }
 
-.BrandImageBalenciaga, .BrandImageGucci{
-    width: 100vw;
-    height: 40vh;
+.BrandImageBalenciaga, 
+.BrandImageGucci, 
+.BrandImageAdidas, 
+.BrandImageNike, 
+.BrandImageOffWhite, 
+.BrandImagePuma, 
+.BrandImageReebok, 
+.BrandImageVans, 
+.BrandImageUnder, 
+.BrandImageJordan{
+    width: 100%;
+    height: 400px;
+    max-height: 400px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -21,15 +31,35 @@
     /* border: thin dotted #f00; */
 }
 
-.BrandImageBalenciaga{
-    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/balenciaga-campaign.jpg');
-}
+.BrandImageBalenciaga{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/balenciaga-campaign.jpg') }
 
-.BrandImageGucci{
-    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/gucci-campaign.jpg');
-}
+.BrandImageGucci{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/gucci-campaign.jpg') }
 
-.BrandImageGucci h3{
+.BrandImageAdidas{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/adidas-campaign.jpg') }
+
+.BrandImageNike{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/nike-campaign.jpg') }
+
+.BrandImageOffWhite{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/off-white-campaign.jpg') }
+
+.BrandImagePuma{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/puma-campaign.jpg') }
+
+.BrandImageReebok{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/reebok-campaign.jpg') }
+
+.BrandImageVans{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/vans-campaign.jpg') }
+
+.BrandImageUnder{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/under-campaign.jpg') }
+
+.BrandImageJordan{ background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/jordan-campaign.jpg') }
+
+.BrandImageGucci h3, 
+.BrandImageAdidas h3, 
+.BrandImageNike h3, 
+.BrandImageOffWhite h3, 
+.BrandImagePuma h3, 
+.BrandImageReebok h3, 
+.BrandImageVans h3,
+.BrandImageUnder h3,
+.BrandImageJordan h3{
     margin-top: 50px;
     font-size: 7vw;
     color: white;
@@ -38,9 +68,14 @@
     text-shadow: 0 15px 20px rgba(0, 0, 0, 0.1);
 }
 
+.BrandImageUnder h3{
+    letter-spacing: 2vw;
+    font-size: 5vw;
+}
+
 .BrandProducts{
-    width: 70vw;
-    height: 80vh;
+    width: 60%;
+    height: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
